Fix random town

--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -42,16 +42,16 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 2 × Starting (I) Map Tile
   \item 2 × Far (II-III) Map Tile
   \item 5 × Near (IV-V) Map Tile
-  \item 2 × Center (VI-VII) Map Tiles, blindly choosing one with the random Town Field and the other with a Dragon Utopia Field.
+  \item 2 × Center (VI-VII) Map Tiles, blindly choosing one with the Random Town Field and the other with a Dragon Utopia Field.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-When the random Town is captured for the first time, players continue playing the current Round and then play \textbf{one additional final Round}.
-The player controlling the random Town at the end of that final Round is the winner.
+When the Random Town is captured for the first time, players continue playing the current Round and then play \textbf{one additional final Round}.
+The player controlling the Random Town at the end of that final Round is the winner.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-At the end of the \nth{10} Round, if no player controls the random Town, both players lose the game (\textit{the local ruler returns to the castle and regains control of the province}).
-However, if the random Town is first captured in the \nth{10} Round, the game proceeds as normal to its additional final Round (in this case, the \nth{11} Round).
+At the end of the \nth{10} Round, if no player controls the Random Town, both players lose the game (\textit{the local ruler returns to the castle and regains control of the province}).
+However, if the Random Town is first captured in the \nth{10} Round, the game proceeds as normal to its additional final Round (in this case, the \nth{11} Round).
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -68,12 +68,12 @@ However, if the random Town is first captured in the \nth{10} Round, the game pr
 During this Scenario:
 \begin{itemize}
   \item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \svg{building_materials}
-  \item The random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
-  \item Like any other Town, when the random Town is owned by a player, it is a valid location for that player to:
+  \item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
+  \item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:
     \begin{itemize}
       \item Place a newly Recruited Secondary Hero.
       \item Place the Main Hero when defeated.
-      \item Temporarily transport the army to, for 8 \svg{gold}, when the random Town is attacked.
+      \item Temporarily transport the army to, for 8 \svg{gold}, when the Random Town is attacked.
     \end{itemize}
   \item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws cards from the Neutral Units \svgunit{azure} deck until a Dragon not associated with any Faction is drawn.
     The player may immediately Recruit that Dragon for free.
