--- a/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
+++ b/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-20 17:49+0200\n"
+"POT-Creation-Date: 2024-08-20 20:12+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -189,7 +189,7 @@ msgid ""
 "  \\item 2 × Starting (I) Map Tile\n"
 "  \\item 2 × Far (II-III) Map Tile\n"
 "  \\item 5 × Near (IV-V) Map Tile\n"
-"  \\item 2 × Center (VI-VII) Map Tiles, blindly choosing one with the random Town Field and the other with a Dragon Utopia Field.\n"
+"  \\item 2 × Center (VI-VII) Map Tiles, blindly choosing one with the Random Town Field and the other with a Dragon Utopia Field.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -199,8 +199,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-"When the random Town is captured for the first time, players continue playing the current Round and then play \\textbf{one additional final Round}.\n"
-"The player controlling the random Town at the end of that final Round is the winner.\n"
+"When the Random Town is captured for the first time, players continue playing the current Round and then play \\textbf{one additional final Round}.\n"
+"The player controlling the Random Town at the end of that final Round is the winner.\n"
 "\n"
 msgstr ""
 
@@ -209,8 +209,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-"At the end of the \\nth{10} Round, if no player controls the random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
-"However, if the random Town is first captured in the \\nth{10} Round, the game proceeds as normal to its additional final Round (in this case, the \\nth{11} Round).\n"
+"At the end of the \\nth{10} Round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
+"However, if the Random Town is first captured in the \\nth{10} Round, the game proceeds as normal to its additional final Round (in this case, the \\nth{11} Round).\n"
 "\n"
 msgstr ""
 
@@ -235,12 +235,12 @@ msgid ""
 "During this Scenario:\n"
 "\\begin{itemize}\n"
 "  \\item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \\svg{building_materials}\n"
-"  \\item The random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
-"  \\item Like any other Town, when the random Town is owned by a player, it is a valid location for that player to:\n"
+"  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
+"  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
 "    \\begin{itemize}\n"
 "      \\item Place a newly Recruited Secondary Hero.\n"
 "      \\item Place the Main Hero when defeated.\n"
-"      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the random Town is attacked.\n"
+"      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
 "    \\end{itemize}\n"
 "  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws cards from the Neutral Units \\svgunit{azure} deck until a Dragon not associated with any Faction is drawn.\n"
 "    The player may immediately Recruit that Dragon for free.\n"
