"Level" is now always capitalized

--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -48,7 +48,7 @@ $\boldsymbol{4 P}$ \textbf{× Far (II--III) Map Tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)
+Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a Level III fight.)
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
@@ -73,8 +73,8 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
     \item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your Faction's Unit pool (even if another player has one or more of your Units). This includes Units you've previously given to another player.
     \item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.
     \item For the last Mine/Settlement battle, add a \svgunit{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!
-    \item The first time you reach level IV, gain your second specialty.
-    \item When you reach level IV, move your Token on the level tracker to level III.
+    \item The first time you reach Level IV, gain your second specialty.
+    \item When you reach Level IV, move your Token on the Level tracker to Level III.
     \item Additionally, no player can:
     \begin{itemize}
         \item Attack other Heroes.
