--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-20 17:49+0200\n"
+"POT-Creation-Date: 2024-08-21 20:47+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -275,10 +275,10 @@ msgstr ""
 #: coops/emerald_island.tex:52
 #, no-wrap
 msgid ""
-"Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
+"Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
-"Oflaguj wszystkie Kopalnie i Osady. (Nie zapomnij o Kopalni Budulców na Lafelku I. Każdy Lafelek II--III zawiera jedną Kopalnię lub Osadę z Walką na poziomie III.)\n"
+"Oflaguj wszystkie Kopalnie i Osady. (Nie zapomnij o Kopalni Budulców na Lafelku I. Każdy Lafelek II--III zawiera jedną Kopalnię lub Osadę z Walką na Poziomie III.)\n"
 "\n"
 
 #. type: multicols*
@@ -323,8 +323,8 @@ msgid ""
 "    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your Faction's Unit pool (even if another player has one or more of your Units). This includes Units you've previously given to another player.\n"
 "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
 "    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
-"    \\item The first time you reach level IV, gain your second specialty.\n"
-"    \\item When you reach level IV, move your Token on the level tracker to level III.\n"
+"    \\item The first time you reach Level IV, gain your second specialty.\n"
+"    \\item When you reach Level IV, move your Token on the Level tracker to Level III.\n"
 "    \\item Additionally, no player can:\n"
 "    \\begin{itemize}\n"
 "        \\item Attack other Heroes.\n"
@@ -345,8 +345,8 @@ msgstr ""
 "    \\item Jeśli nie masz Jednostek w swojej talii Jednostek (po Walce lub jeśli nie zachowasz co najmniej jednej Jednostki), zwróć wszystkie swoje Jednostki do puli Jednostek twojej Frakcji (nawet jeśli inny gracz ma jedną lub więcej twoich Jednostek). Obejmuje to Jednostki, które wcześniej przekazałeś innemu graczowi.\n"
 "    \\item Będąc w Mieście innego gracza, możesz rekrutować lub wzmacniać ich Jednostki, albo dla nich, albo dla siebie. Potrzebujesz na to zgody innego gracza. Odpowiednie Siedliska lub Cytadela muszą być zbudowane.\n"
 "    \\item Do ostatniej Walki o Kopalnię/Osadę dodaj Neutralną \\svgunit{golden} Jednostkę. Masz nieograniczoną liczbę Rund na tę Walkę. Nie możesz użyć Mistrzowskiej Dyplomacji, aby pominąć tę Walkę!\n"
-"    \\item Przy pierwszym osiągnięciu poziomu IV, zdobądź swoją drugą specjalizację.\n"
-"    \\item Po osiągnięciu poziomu IV, przenieś swoją Lostkę na liczniku poziomów na poziom III.\n"
+"    \\item Przy pierwszym osiągnięciu Poziomu IV, zdobądź swoją drugą specjalizację.\n"
+"    \\item Po osiągnięciu Poziomu IV, przenieś swoją Lostkę na liczniku Poziomów na Poziom III.\n"
 "    \\item Dodatkowo, żaden gracz nie może:\n"
 "    \\begin{itemize}\n"
 "        \\item Atakować innych bohaterów.\n"
