--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -95,22 +95,17 @@ Take the following Map Tiles and set them up as shown in the Scenario map layout
 
 \subsection*{\MakeUppercase{Heroes Placement}}
 
-The Enemy Hero General Kendal is represented by one Castle Faction Hero
-model and appears on the center Field of the S3 Starting Map Tile.
+The Enemy Hero General Kendal is represented by one Castle Faction Hero model and appears on the center Field of the S3 Starting Map Tile.
 
-The Castle Charging Hero is represented by one Castle Faction Hero model
-and appears on (and owns) the Settlement Field of the F3 Map Tile.
+The Castle Charging Hero is represented by one Castle Faction Hero model and appears on (and owns) the Settlement of the F3 Map Tile.
 
-The Rampart Charging Hero is represented by one Rampart Faction Hero model
-and appears on (and owns) the Settlement Field of the F10 Map Tile.
+The Rampart Charging Hero is represented by one Rampart Faction Hero model and appears on (and owns) the Settlement of the F10 Map Tile.
 
-The Tower Charging Hero is represented by one Tower Faction Hero model
-and appears on (and owns) the Settlement Field of the \#F1 Map Tile.
+The Tower Charging Hero is represented by one Tower Faction Hero model and appears on (and owns) the Settlement of the \#F1 Map Tile.
 
 Place your Main Hero on the center Field of the Inferno Starting S6 Map Tile.
 
-Place your Secondary Hero, represented by one Dungeon Faction Hero model of your choice,
-on the Settlement Field of the F2 Map Tile. This Settlement produces no resources.
+Place your Secondary Hero, represented by one Dungeon Faction Hero model of your choice, on the Settlement of the F2 Map Tile. This Settlement produces no resources.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -119,7 +114,7 @@ Queen Catherine Ironfist arrives at the end of the Round 16.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
-You lose one Combat encounter with your Main Hero (Surrender costs 10 \svg{gold}, and does not count as a defeat).
+You lose one Combat encounter with your Main Hero (Surrendering costs 10 \svg{gold}, and does not count as a defeat).
 
 You lose your Faction Town on the S6 Map Tile.
 
