--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 17:05+0200\n"
+"POT-Creation-Date: 2024-08-22 18:15+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -310,7 +310,7 @@ msgid ""
 "  \\item Add a Pack of Harpies to your hand.\n"
 "  \\item Add a Pack of Magogs to your hand.\n"
 "  \\item Add an Ammo Cart to your hand.\n"
-"  \\item Search (4) the Spell deck.\n"
+"  \\item Search (4) the Spell Deck.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -319,7 +319,7 @@ msgstr ""
 "  \\item Dodaj Grupę Harpii do swojej ręki.\n"
 "  \\item Dodaj Grupę Magogów do swojej ręki.\n"
 "  \\item Dodaj Wóz z Amunicją do swojej ręki.\n"
-"  \\item Przeszukaj (4) talię Zaklęć.\n"
+"  \\item Przeszukaj (4) Talię Zaklęć.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -417,10 +417,10 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:68
 #, no-wrap
 msgid ""
-"\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell decks. Reset them after every Combat.}.\n"
+"\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Zaklęć Szarżujących Bohaterów:} 2 × Spowolnienie\\footnote{Wszyscy Wrogowie Szarżujących Bohaterów korzystają z tych samych talii AI i Zaklęć. Odnów je po każdej Walce.}.\n"
+"\\textbf{Talia Zaklęć Szarżujących Bohaterów:} 2 × Spowolnienie\\footnote{Wszyscy Wrogowie Szarżujących Bohaterów korzystają z tych samych Talii AI i Zaklęć. Odnów je po każdej Walce.}.\n"
 "\n"
 
 #. type: multicols*
