--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-20 17:49+0200\n"
+"POT-Creation-Date: 2024-08-22 18:15+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -147,12 +147,12 @@ msgstr ""
 #: sections/recommendations.tex:35
 #, no-wrap
 msgid ""
-"Except for the Magic Arrow, each Spell appears exactly twice in the Spell deck.\n"
-"After players prepare their starting M\\&M decks, it is recommended to remove Magic Arrows from the Spell deck until no more than two remain.\n"
+"Except for the Magic Arrow, each Spell appears exactly twice in the Spell Deck.\n"
+"After players prepare their starting M\\&M Decks, it is recommended to remove Magic Arrows from the Spell Deck until no more than two remain.\n"
 "\n"
 msgstr ""
 "Z wyjątkiem Magicznej Strzały każde zaklęcie pojawia się dokładnie dwa razy w Talii Zaklęć.\n"
-"Po przygotowaniu początkowych talii M\\&M przez graczy, zaleca się usunięcie Magicznych Strzał z Talii Zaklęć, aż pozostaną nie więcej niż dwie.\n"
+"Po przygotowaniu początkowych Talii M\\&M przez graczy, zaleca się usunięcie Magicznych Strzał z Talii Zaklęć, aż pozostaną nie więcej niż dwie.\n"
 "\n"
 
 #. type: multicols
@@ -331,7 +331,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When deciding which building to construct in your Town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other Faction-specific buildings.\n"
-"  \\item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your deck.\n"
+"  \\item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your Deck.\n"
 "    This includes any cards that allow you to draw cards or retrieve cards from your Discard Pile.\n"
 "  \\item Try to avoid using your Main Hero's Movement Points for Actions that your Secondary Hero can handle, such as flipping the Map Tiles, Visiting Water Wheels, and so on.\n"
 "\\end{itemize}\n"
@@ -339,7 +339,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Decydując, który budynek wybudować w swoim Mieście, szczególnie na początku gry, \\textit{zazwyczaj} najlepiej jest priorytetowo traktować Jednostki ponad Ratusz, Cytadelę, Gildię Magów lub inne budynki specyficzne dla frakcji.\n"
-"  \\item Jeśli nie jesteś pewien, które Zaklęcie, Artefakt lub Zdolność wybrać, priorytetowo traktuj te, które pomagają w przeszukiwaniu talii.\n"
+"  \\item Jeśli nie jesteś pewien, które Zaklęcie, Artefakt lub Zdolność wybrać, priorytetowo traktuj te, które pomagają w przeszukiwaniu Talii.\n"
 "    Obejmuje to karty, które pozwalają ci dobierać karty lub odzyskiwać karty ze stosu kart odrzuconych.\n"
 "  \\item Staraj się unikać zużywania Punktów Ruchu Bohatera Głównego na akcje, które może wykonać Bohater Pomocniczy, takie jak obracanie Kafelków Mapy, odwiedzanie Młynów Wodnych i tym podobne.\n"
 "\\end{itemize}\n"
