--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 17:05+0200\n"
+"POT-Creation-Date: 2024-08-22 18:15+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -306,14 +306,23 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:46
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Bonus:} Choose one of the following options:\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Add a Pack of Harpies to your hand.\n"
+#| "  \\item Add a Pack of Magogs to your hand.\n"
+#| "  \\item Add an Ammo Cart to your hand.\n"
+#| "  \\item Search (4) the Spell deck.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
 "  \\item Add a Pack of Harpies to your hand.\n"
 "  \\item Add a Pack of Magogs to your hand.\n"
 "  \\item Add an Ammo Cart to your hand.\n"
-"  \\item Search (4) the Spell deck.\n"
+"  \\item Search (4) the Spell Deck.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -424,9 +433,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:68
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell decks. Reset them after every Combat.}.\n"
+#| "\n"
 msgid ""
-"\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell decks. Reset them after every Combat.}.\n"
+"\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.\n"
 "\n"
 msgstr ""
 "\\textbf{Balíček Kouzel Útočících Hrdinů:} 2 × karta Kouzla Zpomalení\\footnote{Všichni nepřátelští Útočící Hrdinové používají stejné balíčky AI a Kouzel. Po každém boji je resetujte.}.\n"
