--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-20 20:02+0200\n"
+"POT-Creation-Date: 2024-08-22 18:15+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -76,7 +76,7 @@ msgstr ""
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
 #: coops/emerald_island.tex:58 clash/bloody_grail.tex:64 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
-#: campaigns/inferno_steadwicks_fall.tex:129
+#: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
 #, no-wrap
 msgid ""
@@ -89,7 +89,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:91 clash/the_hunt.tex:72
 #: campaigns/inferno_devilish_plan.tex:148
-#: campaigns/inferno_steadwicks_fall.tex:193
+#: campaigns/inferno_steadwicks_fall.tex:188
 #: campaigns/inferno_deal_with_the_devil.tex:173
 #, no-wrap
 msgid ""
@@ -598,6 +598,7 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:276
+#, msgid ""
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Rust Dragon {\\scriptsize Requires Fortress "
 "Expansion}}} \\medskip \\textit{Rust Dragons are known to hunt Gorgons, and "
@@ -606,12 +607,12 @@ msgid ""
 "through the strongest armor, lowering the defense of its target while "
 "inflicting further damage.  } \\medskip \\textbf{Fighting the Rust Dragon:} "
 "\\begin{enumerate} \\item Place the Rust Dragon miniature/card on the "
-"battlefield.  Ignore its ability.  \\item Prepare four spare M\\&M deck "
+"battlefield.  Ignore its ability.  \\item Prepare four spare M\\&M Deck "
 "cards to mark pools of acid.  \\end{enumerate} \\medskip \\textbf{Rules:} "
 "\\begin{itemize} \\item The Rust Dragon is immune to basic Spells.  \\item "
 "\\textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control "
 "ability that allows it to spew four pools of sulfuric acid onto the "
-"battlefield \\textit{at the beginning} of each Combat Round.  Use M\\&M deck "
+"battlefield \\textit{at the beginning} of each Combat Round.  Use M\\&M Deck "
 "cards placed face down to mark their locations.  \\item The Rust Dragon "
 "cannot place pools on the same tiles as in the previous Round.  Mark the "
 "tiles with spare Faction cubes to indicate where the pools were located.  "
@@ -634,7 +635,7 @@ msgstr ""
 "na podstawowe Zaklęcia. \\item \\textit{Żrące Wymiociny:} Rdzawy Smok "
 "posiada potężną zdolność kontroli tłumu, która pozwala mu wypluwać cztery "
 "pola kwasu siarkowego na Pole Bitwy \\textit{na początku} każdej Rundy "
-"walki. Użyj kart z talii M\\&M umieszczonych rewersem do góry, aby oznaczyć "
+"walki. Użyj kart z Talii M\\&M umieszczonych rewersem do góry, aby oznaczyć "
 "ich lokalizacje. \\item Rdzawy Smok nie może umieszczać kwasu na tych samych "
 "polach, co w poprzedniej Rundzie. Oznacz Pola za pomocą wolnych Kostek "
 "Frakcyji, aby wskazać Pola, gdzie znajdował się kwas. \\item Pola z kwasem "
@@ -689,6 +690,7 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:348
+#, msgid ""
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Faerie Dragon {\\scriptsize Requires "
 "Rampart Expansion}}} \\medskip \\textit{Faerie Dragons are deceptively cute, "
@@ -698,7 +700,7 @@ msgid ""
 "spells.  Some say Magic Mirror is one of their natural defensive traits.  } "
 "\\medskip \\textbf{Fighting the Faerie Dragon:} \\begin{enumerate} \\item "
 "Place 2 Faerie Dragon cards on the battlefield.  Ignore their abilities.  "
-"\\item Place 1 Dendroid card from the \\svg{silver} Neutral Units deck onto "
+"\\item Place 1 Dendroid card from the \\svg{silver} Neutral Units Deck onto "
 "the battlefield, and place 3 additional cards face down to represent the "
 "other 3 Dendroids.  \\end{enumerate} \\medskip \\textbf{Rules:} "
 "\\begin{itemize} \\item The Faerie Dragon is immune to basic Spells.  \\item "
@@ -706,7 +708,7 @@ msgid ""
 "\\item All Spells are displayed visibly next to the Combat Board: "
 "\\begin{enumerate} \\item The first Spell is \\textit{Lightning}.  \\item "
 "The second Spell is \\textit{Cure}.  \\item For the third Spell, the Faerie "
-"Dragon randomly picks an expert Spell from the Spell deck, excluding Map "
+"Dragon randomly picks an expert Spell from the Spell Deck, excluding Map "
 "\\svg{map} Spells.  If a Map \\svg{map} Spell is picked, draw another "
 "Spell.  \\end{enumerate} \\item \\textit{Trickster:} In the first Round of "
 "the battle, the first targeted Faerie Dragon is a mere mirage.  It inflicts "
@@ -727,7 +729,7 @@ msgstr ""
 "obronnym jest Magiczne Zwierciadło.} \\medskip \\\\ \\textbf{Walka ze "
 "Czarodziejskim Smokiem:} \\begin{enumerate} \\item Umieść na Polu bitwy 2 "
 "karty Czarodziejskich Smoków. Zignoruj ich zdolności. \\item Umieść na "
-"planszy Drzewca z talii \\svg{silver} Jednostek Neutralnych i dodatkowo 3 "
+"planszy Drzewca z Talii \\svg{silver} Jednostek Neutralnych i dodatkowo 3 "
 "zakryte karty reprezentujące pozostałe 3 Drzewce. \\end{enumerate} \\medskip "
 "\\textbf{Zasady:} \\begin{itemize} \\item Czarodziejski Smok jest odporny na "
 "podstawowe Zaklęcia. \\item Czarodziejski Smok może rzucić maksymalnie dwa "
