Fix: "hero" -> "Hero"

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -90,7 +90,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
-  \item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied hero.
+  \item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied Hero.
   \item The Hero who defeats an enemy army gains 2 \svg{experience}.
     The victorious player rolls two Treasure Dice and resolves one of them.
   \item Additionally, no player can:
