--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -65,7 +65,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Heroes Placement}}
 
-... describe how your and enemy heroes will be placed ...
+... describe how your and enemy Heroes will be placed ...
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
