--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -150,10 +150,19 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:17
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textit{A long time ago, a mighty fortress was built to house the fantastic and murderous Titans.\n"
+#| "  No one has ever entered and returned to tell the Tale.\n"
+#| "  Now, there are rumors about the death of the guardians and an incredible amount of treasures, potentially including the best bow in the world.\\\\\n"
+#| "  If this legend of the empty fort is true, it's time for excavation.\\\\\n"
+#| "  But for now, you and your allies need to find the keys spread across Antagarich to open the gate of the Titans' Stronghold.\n"
+#| "}\n"
+#| "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
+#| "\n"
 msgid ""
 "\\textit{A long time ago, a mighty fortress was built to house the fantastic and murderous Titans.\n"
-"  No one has ever entered and returned to tell the Tale.\n"
+"  No one has ever entered and returned to tell the tale.\n"
 "  Now, there are rumors about the death of the guardians and an incredible amount of treasures, potentially including the best bow in the world.\\\\\n"
 "  If this legend of the empty fort is true, it's time for excavation.\\\\\n"
 "  But for now, you and your allies need to find the keys spread across Antagarich to open the gate of the Titans' Stronghold.\n"
