Exclude metadata and fix templates

--- a/templates/default.tex
+++ b/templates/default.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{...}{\images/title.png}
+\addscenariosection{1}{Cooperative Scenario}{...}{\images/title.png}
 
 \begin{multicols*}{2}
 
