Fix: "scenario" -> "Scenario"

--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{Emerald Island}{\images/logistics.png}
+\addscenariosection{1}{Cooperative Scenario}{Emerald Island}{\images/logistics.png}
 
 \begin{multicols*}{2}
 
