--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{Titans' Stronghold}{\images/earthquake.png}
+\addscenariosection{1}{Cooperative Scenario}{Titans' Stronghold}{\images/earthquake.png}
 
 \begin{multicols*}{2}
 
