--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{Sentinels}{\images/sentinel.png}
+\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\images/sentinel.png}
 
 \begin{multicols}{2}
 
