--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:21+0200\n"
+"POT-Creation-Date: 2024-08-22 18:35+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -19,8 +19,12 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/sentinels.tex:3
+#, fuzzy
+#| msgid ""
+#| "\\addscenariosection{1}{Cooperative scenario}{Sentinels}{\\images/"
+#| "sentinel.png}"
 msgid ""
-"\\addscenariosection{1}{Cooperative scenario}{Sentinels}{\\images/sentinel."
+"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
 "png}"
 msgstr ""
 "\\addscenariosection{1}{Kooperativní scéná\\v{r}}{Strážci}{\\images/sentinel."
