--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:15+0200\n"
+"POT-Creation-Date: 2024-08-22 18:35+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -120,8 +120,12 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/titans_stronghold.tex:3
+#, fuzzy
+#| msgid ""
+#| "\\addscenariosection{1}{Cooperative scenario}{Titans' Stronghold}"
+#| "{\\images/earthquake.png}"
 msgid ""
-"\\addscenariosection{1}{Cooperative scenario}{Titans' Stronghold}{\\images/"
+"\\addscenariosection{1}{Cooperative Scenario}{Titans' Stronghold}{\\images/"
 "earthquake.png}"
 msgstr ""
 "\\addscenariosection{1}{Kooperativní scéná\\v{r}}{Pevnost Titánů}{\\images/"
