Fix: reword "tile" -> "Field" in The Hunt

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -44,7 +44,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 2 × Starting (I) Map Tile
   \item 2 × Far (II--III) Map Tile
   \item 2 × Near (IV--V) Map Tile
-  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
 \textbf{For a 3-player Scenario:}
@@ -52,7 +52,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 3 × Starting (I) Map Tile
   \item 3 × Far (II--III) Map Tile
   \item 3 × Near (IV--V) Map Tile
-  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -138,7 +138,7 @@ During this Scenario:
         \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction cubes.
           Remove them after they have absorbed damage.
         \item A trinket: The Azure Dragon roars and summons an ice storm, causing all creatures to freeze in fear.
-          This results in every Unit moving only 1 battle tile per Round, while the Azure Dragon can fly to any tile on the Combat Board.
+          This results in every Unit moving only 1 Field per Round, while the Azure Dragon can fly to any Field on the Combat Board.
       \end{itemize}
     \item The Azure Dragon is immune to all Spells cast against it.
     \item Buffs and enhancements cast on player's Units remain effective.
@@ -264,9 +264,9 @@ During this Scenario:
     \item The Rust Dragon is immune to basic Spells.
     \item \textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control ability that allows it to spew four pools of sulfuric acid onto the battlefield \textit{at the beginning} of each Combat Round.
       Use M\&M Deck cards placed face down to mark their locations.
-    \item The Rust Dragon cannot place pools on the same tiles as in the previous Round.
-      Mark the tiles with spare Faction cubes to indicate where the pools were located.
-    \item The pools of sulfuric acid block battlefield tiles and impede movement for one Round only.
+    \item The Rust Dragon cannot place pools on the same Fields as in the previous Round.
+      Mark the Fields with spare Faction cubes to indicate where the pools were located.
+    \item The pools of sulfuric acid block battlefield Fields and impede movement for one Round only.
       They serve as Obstacles for both players and the Dragon.
     \item The Rust Dragon's passive ability, \textit{Corrosion}, decreases an enemy Unit's armor by 2 with each attack.
       Place a spare Faction cube on the Unit's card to indicate this effect.
