--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:15+0200\n"
+"POT-Creation-Date: 2024-08-22 18:48+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -202,7 +202,7 @@ msgid ""
 "  \\item 2 × Starting (I) Map Tile\n"
 "  \\item 2 × Far (II--III) Map Tile\n"
 "  \\item 2 × Near (IV--V) Map Tile\n"
-"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -216,7 +216,7 @@ msgid ""
 "  \\item 3 × Starting (I) Map Tile\n"
 "  \\item 3 × Far (II--III) Map Tile\n"
 "  \\item 3 × Near (IV--V) Map Tile\n"
-"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -330,11 +330,11 @@ msgid ""
 "shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
 "spare Faction cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
-"creatures to freeze in fear.  This results in every Unit moving only 1 "
-"battle tile per Round, while the Azure Dragon can fly to any tile on the "
-"Combat Board.  \\end{itemize} \\item The Azure Dragon is immune to all "
-"Spells cast against it.  \\item Buffs and enhancements cast on player's "
-"Units remain effective.  \\end{itemize} }"
+"creatures to freeze in fear.  This results in every Unit moving only 1 Field "
+"per Round, while the Azure Dragon can fly to any Field on the Combat Board.  "
+"\\end{itemize} \\item The Azure Dragon is immune to all Spells cast against "
+"it.  \\item Buffs and enhancements cast on player's Units remain effective.  "
+"\\end{itemize} }"
 msgstr ""
 
 #. type: Plain text
@@ -438,9 +438,9 @@ msgid ""
 "ability that allows it to spew four pools of sulfuric acid onto the "
 "battlefield \\textit{at the beginning} of each Combat Round.  Use M\\&M Deck "
 "cards placed face down to mark their locations.  \\item The Rust Dragon "
-"cannot place pools on the same tiles as in the previous Round.  Mark the "
-"tiles with spare Faction cubes to indicate where the pools were located.  "
-"\\item The pools of sulfuric acid block battlefield tiles and impede "
+"cannot place pools on the same Fields as in the previous Round.  Mark the "
+"Fields with spare Faction cubes to indicate where the pools were located.  "
+"\\item The pools of sulfuric acid block battlefield Fields and impede "
 "movement for one Round only.  They serve as Obstacles for both players and "
 "the Dragon.  \\item The Rust Dragon's passive ability, \\textit{Corrosion}, "
 "decreases an enemy Unit's armor by 2 with each attack.  Place a spare "
